2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/apple-red.png:
	* tests/gnome-gmush.png:
	* tests/test-widget.c:
	* tests/Makefile.am:
	Added apple and mushroom icons, so that line marks in test-widget
	finally show up without gnome.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/def.lang: do not allow backslash
	in net-address. Fixes bug #541791.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 545096 – highlighting problems for DTD entities inside xml.

	* gtksourceview/language-specs/dtd.lang: do not highlight any
	unknown text as error.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 543313 – Self closed <script> tags are not accounted correctly
	in html.

	* gtksourceview/language-specs/html.lang: committed fix by pbor.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (analyze_line):
	* gtksourceview/language-specs/forth.lang:
	branched for 2.22, un-un-done the last two string changes.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (analyze_line):
	un-marked the new string as translatable, since strings are
	frozen.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/forth.lang: reverted last commit,
	need to branch for 2-22 first. Bureaucracy!

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/forth.lang: changed "Compiler opt"
	style name to "Compiler Directive", bug #518437.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 114337 – long lines kill GtkSourceView.
	Worked it around by disabling syntax highlighting if analyzing
	single line took more than 2 seconds.

	* gtksourceview/gtksourcecontextengine.c:
	(GtkSourceContextEnginePrivate::disabled): new field,
	(gtk_source_context_engine_update_highlight): check that field,
	(analyze_line): check elapsed time on every iteration and abort
	in two seconds,